tests/snapshots/render_snapshots__snapshot_rebase_popup_in_progress.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Rebasing──────────────────────────────────────────────────────────────────────┐"
"│ r Continue                                                                   │"
"│ s Skip                                                                       │"
"│ a Abort                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
