tests/snapshots/render_snapshots__snapshot_rebase_popup_with_push_remote.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"┌Rebase────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -k Keep empty commits (--keep-empty)                                         │"
"│ -r Rebase merges (--rebase-merges=)                                          │"
"│ -u Update branches (--update-refs)                                           │"
"│ -d Use author date as committer date (--committer-date-is-author-date)       │"
"│ -t Use current time as author date (--ignore-date)                           │"
"│                                                                              │"
"│Rebase main onto                                                              │"
"│ p origin/main                                                                │"
"│ u ${upstream}, setting it                                                    │"
"│ e Elsewhere                                                                  │"
"│                                                                              │"
"│Rebase                                                                        │"
"│ i Interactively   m To modify a commit   f To autosquash                     │"
"│ s A subset        w To reword a commit                                       │"
"│                   k To remove a commit                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
