tests/snapshots/render_snapshots__snapshot_rebase_todo_view.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 100, 24)"
---
"┌Rebase─────────────────────────────────────────────────────────────────────────────────/repo/magi/┐"
"│ pick   [hash] Add feature A                                                                     │"
"│ fixup  [hash] Fix typo in A                                                                     │"
"│ reword [hash] Add feature C                                                                     │"
"│ drop   [hash] WIP experiment                                                                    │"
"│                                                                                                  │"
"│ p   Pick                                                                                         │"
"│ r   Reword                                                                                       │"
"│ e   Edit                                                                                         │"
"│ s   Squash                                                                                       │"
"│ f   Fixup                                                                                        │"
"│ d   Drop                                                                                         │"
"│ K/J Move entry                                                                                   │"
"│ u   Undo                                                                                         │"
"│ RET Show commit                                                                                  │"
"│                                                                                                  │"
"│ R   Confirm rebase                                                                               │"
"│ q   Abort                                                                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────────────────────────┘"
