tests/snapshots/render_snapshots__snapshot_reset_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Reset─────────────────────────────────────────────────────────────────────────┐"
"│Reset      Reset this                                                         │"
"│ b Branch   m Mixed    (HEAD and index)                                       │"
"│ f File     s Soft     (HEAD only)                                            │"
"│            h Hard     (HEAD, index and worktree)                             │"
"│            k Keep     (HEAD and index, keeping uncommitted)                  │"
"│            i Index    (only)                                                 │"
"│            w Worktree (only)                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
